non-msrv-tests/tests/ui/comma.stderr
error: expected `,`
 --> tests/ui/comma.rs:2:24
  |
2 | #[derive_where(Clone; T;)]
  |                        ^

error: expected type to bind to, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/ui/comma.rs:6:25
  |
6 | #[derive_where(Clone; T,,)]
  |                         ^
